Dodate CRUD operacije za neke tabele
