# app/Http/Controllers/Api/LanguageController.php
@@ -3,18 +3,44 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
+use App\Models\Language;
 use Illuminate\Http\Request;
 
 class LanguageController extends Controller
 {
-    /**
-     * Display a listing of the resource.
-     *
-     * @return \Illuminate\Http\Response
+    /**  
+     *        @OA\Get(
+     *     path="/api/languages",
+     *     tags={"Language"},
+     *     summary="Finds all languages",
+     *     description="Multiple status values can be provided with comma separated string",
+     *     operationId="languages.index",
+     *     @OA\Parameter(
+     *         name="status",
+     *         in="query",
+     *         description="Status values that needed to be considered for filter",
+     *         required=true,
+     *         explode=true,
+     *         @OA\Schema(
+     *             default="active",
+     *             type="string",
+     *             enum={"active", "inactive"} 
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation"
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid status value"
+     *     )
+     * )
      */
     public function index()
     {
-        //
+        $language = Language::all();
+        return response()->json(['languages' => $language]);
     }
 
     /**
@@ -25,7 +51,16 @@ class LanguageController extends Controller
      */
     public function store(Request $request)
     {
-        //
+        try {
+            $validated = $request->validate([
+                'name' => 'required|max:255',
+                'code' => 'required'
+            ]);
+            $languages = Language::create($validated);
+            return response()->json(['languages' => $languages], '201');
+        } catch (\Exception $e) {
+            return response()->json($e->getMessage());
+        }
     }
 
     /**
@@ -36,7 +71,12 @@ class LanguageController extends Controller
      */
     public function show($id)
     {
-        //
+        try {
+            $language = Language::findOrFail($id);
+            return response()->json(['languages' => $language]);
+        } catch (\Exception $e) {
+            return response()->json($e->getMessage());
+        }
     }
 
     /**
@@ -48,7 +88,17 @@ class LanguageController extends Controller
      */
     public function update(Request $request, $id)
     {
-        //
+        try {
+            $validated = $request->validate([
+                'name' => 'required|max:255',
+                'code' => 'required'
+            ]);
+            $languages = Language::findOrFail($id);
+            $languages = Language::update($validated);
+            return response()->json(['languages' => $languages], '201');
+        } catch (\Exception $e) {
+            return response()->json($e->getMessage());
+        }
     }
 
     /**
@@ -59,6 +109,12 @@ class LanguageController extends Controller
      */
     public function destroy($id)
     {
-        //
+        try {
+            $languages = Language::findOrFail($id);
+            $languages->delete();
+            return response()->json(['languages' => $languages], '200');
+        } catch (\Exception $e) {
+            return response()->json($e->getMessage());
+        }
     }
 }
